--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WallamAngular</title>
+  <title>Wallam</title>
   <base href="/">
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/dashboard/">
